# nn

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/nn_backend/: Cargo.toml  nn_backend.did
src/nn_backend/src/: lib.rs  main.rs  matrix.rs  network.rs
src/nn_frontend/src/: index.html  index.js
